2002-10-17  Darin Adler  <darin@apple.com>

	- fixed 3077910 -- REGRESSION: download window open at startup time -> no scrollbars

        * WebView.subproj/WebDynamicScrollBarsView.m:
        (-[WebDynamicScrollBarsView updateScrollers]):
	Check for WebDocumentView protocol before making the layout method
	call. Prevents exception when WebDynamicScrollBarsView is used with
	a document that is not a WebDocumentView.

2002-10-16  Richard Williamson  <rjw@apple.com>

        Added some drawing debug code (ifdef excluded).
        
        * WebView.subproj/WebHTMLView.m:
        (-[WebHTMLView drawRect:]):

2002-10-16  Darin Adler  <darin@apple.com>

	Fixed anomalies with plugin positioning caused by my switch to
	NSViewFocusDidChangeNotification. Turns out that is not sent during
	live resize, but we need things to work during live resize.

        * Plugins.subproj/WebBaseNetscapePluginView.m:
        (-[WebBaseNetscapePluginView start]): Register for changes in the
	bounds and frame of all superviews again, instead of using
	NSViewFocusDidChangeNotification.

2002-10-16  Richard Williamson  <rjw@apple.com>

        Fixed 2969367.  Ensure layout happens before doing check
        to determine if scrollbars are needed.  Ahhh, dynamic
        scrollbars work so much better now.
        
        * WebView.subproj/WebDynamicScrollBarsView.m:
        (-[WebDynamicScrollBarsView updateScrollers]):

2002-10-16  Darin Adler  <darin@apple.com>

	Fixed the problem where we would leave white bits when making the window larger.

        * WebView.subproj/WebHTMLView.m: (-[WebHTMLView drawRect:]): During live resize,
	use the visible rectangle after doing layout, not before.

2002-10-16  Richard Williamson  <rjw@apple.com>

        Fixed regression in visited links due to change is semantics of
        [dataSource request], added [dataSource _originalRequest].  Items
        always need to be added to history with the original request.
        